--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -14,6 +14,9 @@
     <i class="fa-brands fa-spotify"></i>
     <p class="logo-text">Spotify</p>
 </div>
+<div class="side-bar">
+    
+</div>
 </div>
 </header>   
 </body>
