all files saved

--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -15,7 +15,9 @@
     <p class="logo-text">Spotify</p>
 </div>
 <div class="side-bar">
+<div class="firt-box">
     
+</div>   
 </div>
 </div>
 </header>   
